implementação do pedido eletrônico
