# swagger-output.json
@@ -1,19 +1,21 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
     "title": "REST API",
-    "description": ""
+    "description": "Api relativa a um pedido eletrônico de supermercado",
+    "contact": {
+      "name": "Bruno Faria",
+      "email": "devbrunofaria@gmail.com"
+    }
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["http"],
   "paths": {
     "/produtos": {
       "get": {
-        "description": "",
+        "description": "Busca todos os produtos cadastrados",
         "parameters": [],
         "responses": {
           "200": {
@@ -25,8 +27,16 @@
         }
       },
       "post": {
-        "description": "",
-        "parameters": [],
+        "description": "Cadastra novo produto categoria permitidas: [Frios, Laticínios, Bebidas alcoólicas, Pães]",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Produto"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "OK"
@@ -37,14 +47,18 @@
         }
       }
     },
-    "/produtos/{categoria}": {
+    "/produtos/filtrar": {
       "get": {
-        "description": "",
+        "description": "Filtra os produtos por ordenar : [Maior preço, Menor preço, Nome] ou por categoria: [Frios, Laticínios, Bebidas alcoólicas, Pães]",
         "parameters": [
           {
+            "name": "ordenar",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "categoria",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           }
         ],
@@ -60,7 +74,16 @@
     },
     "/produtos/{id}": {
       "put": {
-        "description": "",
+        "description": "Edita um produto cadastrado categoria permitidas: [Frios, Laticínios, Bebidas alcoólicas, Pães]",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Produto"
+              }
+            }
+          }
+        },
         "parameters": [
           {
             "name": "id",
@@ -69,6 +92,7 @@
             "type": "string"
           }
         ],
+
         "responses": {
           "200": {
             "description": "OK"
@@ -79,7 +103,7 @@
         }
       },
       "delete": {
-        "description": "",
+        "description": "Exclui um produto do cadastro",
         "parameters": [
           {
             "name": "id",
@@ -100,24 +124,20 @@
     },
     "/carrinho": {
       "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "name",
-            "in": "query",
-            "type": "string"
+        "description": "Busca o carrinho atual no banco de dados",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
-          {
-            "name": "startDate",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "finishDate",
-            "in": "query",
-            "type": "string"
+          "500": {
+            "description": "Internal Server Error"
           }
-        ],
+        }
+      },
+      "post": {
+        "description": "Usado apenas para inicializar o banco de dados",
+        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
@@ -130,27 +150,32 @@
     },
     "/carrinho/produto/{id}": {
       "put": {
-        "description": "",
+        "description": "Adiciona produto no carrinho ou edita a quantidade",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Carrinho"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "Retira produto do carrinho",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
-          },
-          {
-            "name": "name",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "startDate",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "finishDate",
-            "in": "query",
             "type": "string"
           }
         ],
@@ -162,38 +187,68 @@
             "description": "Internal Server Error"
           }
         }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "Produto": {
+        "type": "object",
+        "properties": {
+          "nome": {
             "type": "string"
           },
-          {
-            "name": "name",
-            "in": "query",
+          "categoria": {
+            "enum": ["Frios", "Laticínios", "Bebidas alcoólicas", "Pães"]
+          },
+          "fabricante": {
             "type": "string"
           },
-          {
-            "name": "startDate",
-            "in": "query",
+          "preco": {
+            "type": "number"
+          },
+          "descricao": {
             "type": "string"
           },
-          {
-            "name": "finishDate",
-            "in": "query",
+          "codigoBarras": {
+            "type": "number"
+          },
+          "imagem": {
             "type": "string"
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+        }
+      },
+      "Carrinho": {
+        "type": "object",
+        "properties": {
+          "total": {
+            "type": "number"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "items": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ItemCarrinho"
+            }
+          }
+        }
+      },
+      "ItemCarrinho": {
+        "type": "object",
+        "properties": {
+          "productId": {
+            "type": "string"
+          },
+          "quantidade": {
+            "type": "number"
+          },
+          "nome": {
+            "type": "string"
+          },
+          "preco": {
+            "type": "number"
+          },
+          "precoTotalItem": {
+            "type": "number"
           }
         }
       }
